objects/Allegation__c.object
<CustomObject>
    <fields>
        <fullName>Disposition_Indicator__c</fullName>
        <formula>IF(ISPICKVAL( Disposition__c , &quot;Substantiated&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/paomedia/small-n-flat/32/sign-check-icon.png&quot;, &quot;Substantiated&quot;),

IF(ISPICKVAL(Disposition__c , &quot;Unsubstantiated&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/custom-icon-design/pretty-office-8/24/Thumb-down-icon.png&quot;, &quot;Unsubstantiated&quot;),

IF(ISPICKVAL(Disposition__c , &quot;Unfounded&quot;) , IMAGE(&quot;http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/32/Actions-trash-empty-icon.png&quot;, &quot;Unfounded&quot;),

IF(ISPICKVAL(Disposition__c, &quot;Null&quot;), null,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposition Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Substantiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubstantiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfounded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offender</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Allegations (Offender)</relationshipLabel>
        <relationshipName>Allegations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Allegations</relationshipLabel>
        <relationshipName>Allegations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Physical Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Abuse Shaken Baby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Fatality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby Doe/Disabled Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional Maltreatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Surrender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe Haven/Deserted Child</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neglect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maltreatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Victim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Victim</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Allegations</relationshipLabel>
        <relationshipName>Allegations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allegation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referral__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Victim__c</columns>
        <columns>Offender__c</columns>
        <columns>Disposition__c</columns>
        <columns>Disposition_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALLEG-{000000}</displayFormat>
        <label>Allegation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>